# research-software-development

./: .gitignore  CITATION.cff  README.md  _quarto.yml  dependencies.qmd  index.qmd  introduction-presentation.qmd  introduction.qmd  key_code.qmd  privacy_and_cookies.qmd  project_organisation.qmd  releases.qmd  testing.qmd  workflow.qmd
.github/workflows/: alternative-inactive.yml  render.yml
assets/: refs.bib
dependencies/: _content.qmd  dependencies.qmd  practical4.qmd  presentation.qmd  styles.scss
docs/: dependencies.html  documentation.html  index.html  introduction-presentation.html  introduction.html  project_organisation.html  releases.html  search.json  testing.html  version_control.html  workflow.html
docs/dependencies/: dependencies.html  practical4.html  presentation.html
docs/introduction/: introduction-presentation.html  introduction.html  practical_1.html
docs/project_org/: practical2.html  project_org_presentation.html  project_organisation.html
heading_converter/: pyproject.toml
heading_converter/src/heading_converter/: __init__.py
introduction/: _content.qmd  introduction-presentation.qmd  introduction.qmd  practical_1.qmd
project_org/: _content.qmd  practical2.qmd  project_org_presentation.qmd  project_organisation.qmd
releases/: _content.qmd  practical6.qmd  presentation.qmd  releases.qmd
summary/: _content.qmd  presentation.qmd  summary.qmd
testing/: _content.qmd  practical5.qmd  presentation.qmd  testing.qmd
version_control/: _content.qmd  practical3.qmd  presentation.qmd  version_control.qmd
(+5 files in other folders)
