[project]
authors = [{name = "Maeve Murphy Quinlan", email = "earmmu@leeds.ac.uk"}]
dependencies = []
description = "Add a short description here"
name = "heading_converter"
requires-python = ">= 3.11"
version = "0.1.1"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
heading_converter = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyter = ">=1.1.1,<2"
isort = ">=6.0.1,<7"
pipreqs = ">=0.4.13,<0.5"
